--- a/Слывка/Задание 2/css/main.css
+++ b/Слывка/Задание 2/css/main.css
@@ -433,7 +433,17 @@ body {
 
 header {
     position: fixed;
-    margin-left: 303px;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding-bottom: 30px;
+    transition: .3s linear;
+    z-index: 999;
+}
+
+.header_active {
+    background: #0F264C;
+    opacity: 0.95;
 }
 
 .header_logo {
@@ -565,7 +575,6 @@ header {
 }
 
 .how_to_apply {
-    /* background-color: #402B2B; */
     height: 450px;
     background: url(../img/how_to_apply.png) no-repeat left;
 }
@@ -639,11 +648,30 @@ header {
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
+#answer_1 {
+    position: relative;
+    top: -35px;
+    width: 550px;
+    height: 160px;
+    background: #FFF7F5;
+    box-shadow: 0px 20px 40px rgba(238, 77, 71, 0.1);
+    border-radius: 10px;
+    padding-top: 50px;
+    padding-left: 35px;
+    font-family: 'Rubik';
+    font-style: normal;
+    font-weight: 300;
+    font-size: 18px;
+    line-height: 30px;
+    z-index: -1;
+}
+
 .questions_1 {
     width: 560px;
     position: absolute;
     left: 365px;
     top: 3850px;
+    z-index: 2;
 }
 
 .questions_2 {
@@ -708,20 +736,39 @@ header {
     left: 495px;
 }
 
-
-/* .how_to_apply {
-    max-width: 1110px;
-    margin: auto;
-    display: flex;
-    flex-flow: wrap;
-    justify-content: flex-end;
-    text-align: right;
-    background: url(../img/how_to_apply.png) no-repeat ;
+.about_us_feedback {
+    width: 290px;
+    height: 200px;
+    margin-left: 350px;
+    margin-top: 250px;
 }
 
-.how_to_apply_text, .heading {
-    margin-top: 70px;
-    max-width: 455px;
-} */
+.about_us_feedback_text {
+    margin-top: 80px;
+    font-family: 'DM Serif Display';
+    font-style: normal;
+    font-weight: normal;
+    font-size: 48px;
+    line-height: 140%;
+}
+
+.navigation_buttons {
+    position: absolute;
+    top: 4926px;
+    right: 380px;
+    width: 90px;
+    height: 14px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.feedback_1, .feedback_2, .feedback_3 {
+    width: 420px;
+    height: 360px;
+    background: #FFFFFF;
+    box-shadow: 0px 20px 40px rgba(238, 77, 71, 0.1);
+    border-radius: 10px;
+    margin-left: 500px;
+}
 
 /* Intro styles end */
